Fix spacing, flexbox style

--- a/app/assets/stylesheets/_video.scss
+++ b/app/assets/stylesheets/_video.scss
@@ -113,9 +113,23 @@
   }
 }
 
-.assets-wrapper {
-  margin-bottom: 1rem;
+.video-player {
+  margin-bottom: $large-spacing;
 
+  .actions {
+    display: flex;
+    align-items: center;
+    margin-top: $base-spacing;
+  }
+
+  @include body-mobile {
+    .download {
+      display: none;
+    }
+  }
+}
+
+.assets-wrapper {
   .assets {
     .asset-download {
       float: left;
@@ -137,8 +151,8 @@
   }
 }
 
-.mark-as-complete {
-  float: right;
+.mark-as-complete form {
+  margin-bottom: 0;
 }
 
 .seek-button-template {
